Partial_14Dec2021/force-app/main/default/objects/Project_Tracker__c/Project_Tracker__c.object-meta.xml
<CustomObject>
    <label>Project Tracker</label>
    <nameField>
        <displayFormat>PT-{0000}</displayFormat>
        <label>Project Tracker Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Tracker</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>