Partial_14Dec2021/force-app/main/default/objects/Project_Tracker__c/fields/Action_Plan__c.field-meta.xml
<CustomField>
    <fullName>Action_Plan__c</fullName>
    <label>Action Plan</label>
    <type>TextArea</type>
</CustomField>