Partial_14Dec2021/force-app/main/default/objects/Project_Tracker__c/fields/Probability__c.field-meta.xml
<CustomField>
    <fullName>Probability__c</fullName>
    <formula>IF( ISPICKVAL( Response__c ,&quot;Yes&quot;), 0.2, 0)</formula>
    <label>Probability</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>