Partial_14Dec2021/force-app/main/default/objects/Project_Tracker__c/fields/Project_Order__c.field-meta.xml
<CustomField>
    <fullName>Project_Order__c</fullName>
    <label>Project Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>